# marimo-lsp

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  biome.json  commit.md  justfile  package.json  pnpm-lock.yaml  pr.md  pyproject.toml
.claude/skills/effect-ts/: SKILL.md
.github/: CODEOWNERS  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: ci.yml  cla.yml  release.yml  republish.yml  update-marimo-version.yml
extension/: .gitignore  .vscode-test.cjs  .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json  turbo.json  vite.config.mjs  vite.config.mts  vite.config.ts
extension/icons/: marimo-icon-theme.json
extension/lint/: marimo-plugin.mjs  no-at-imports-plugin.mjs  no-at-imports.grit  vscode-type-only-plugin.mjs  vscode-type-only.grit
extension/patches/: vscode-languageclient@10.0.0-next.18.patch
extension/prompts/: marimo.instructions.md
extension/scripts/: check-css-variables.mjs  codegen.mjs  embed-sdist.mjs  vite-plugin-virtual-stylesheet.mjs  vite-plugin-virtual-stylesheet.mts
extension/skills/marimo-pair/: SKILL.md
extension/skills/marimo-pair-vscode/: SKILL.md
extension/src/: FileLogger.ts  assert.ts  commands.js  commands.ts  config.ts  constants.js  constants.ts  debugAdapter.ts  extension.ts  ids.ts  kernelManager.ts  languageClient.ts  layers.ts  logging.ts  notebookControllerManager.ts  notebookSerializer.ts  notifications.ts  operations.ts  python.ts  schemas.js  schemas.ts  services.ts  types.ts
extension/src/__mocks__/: TestExtensionContext.ts  TestLanguageClient.ts  TestPythonExtension.ts  TestPythonLanguageServer.ts  TestRuffLanguageServer.ts  TestSentry.ts  TestTelemetry.ts  TestTyLanguageServer.ts  TestVsCode.ts  context.ts  python-extension.ts  vscode-languageclient.ts  vscode.ts
extension/src/__tests__/: NotebookSerializer.test.ts  TestExtensionContext.ts  TestLanguageClient.ts  TestVsCode.test.ts  TestVsCode.ts  constants.test.ts  extension.test.ts  setup.ts
extension/src/commands/: createSetupCell.ts  debugCell.ts  defineCommand.ts  executeAgentCode.ts  executeAgentCodeDemo.ts  exportNotebookAsHtml.ts  newMarimoNotebook.ts  openAsMarimoNotebook.ts  publishMarimoNotebook.ts  publishMarimoNotebookGist.ts  reportIssue.ts  restartKernel.ts  restartLsp.ts  runStale.ts  showDiagnostics.ts  toggleAutoReload.ts  toggleOnCellChange.ts  updateActivePythonEnvironment.ts
extension/src/config/: Config.ts  ConfigContextManager.ts  MarimoConfigurationService.ts  schemas.ts
extension/src/features/: CellMetadataBindings.ts  CellStatusBarProvider.ts  DebugLayer.ts  HideCodeSync.ts  Logger.ts  Main.ts  MarimoCodeLensProvider.ts  MarimoFileDetector.ts  RegisterCommands.ts  RegisterLanguageModelTools.ts  (+2 more)
extension/syntaxes/: python.tmLanguage.json
extension/tests/: code-mode.test.cjs  diagnostics.test.cjs  extension.test.cjs  external-edit.test.cjs  harness.test.cjs  helpers.cjs  output-reconcile.test.cjs  setup.cjs
extension/tutorials/: dataflow.py  intro.py  plots.py  ui.py
extension/walkthroughs/: create-notebook.md  keep-exploring.md  start-tutorial.md
scripts/: coverage_comment.py  generate_release_notes.py
src/marimo_lsp/: __init__.py  _rules.py  api.py  app_file_manager.py  completions.py  debug_adapter.py  diagnostics.py  kernel_manager.py  loggers.py  models.py  package_manager.py  server.py  session.py  session_consumer.py  session_manager.py  types.py  utils.py
tests/: __init__.py  test_app_file_manager.py  test_diagnostics.py  test_process_cleanup.py  test_rules.py  test_server.py
vscode/: .vscodeignore  LICENSE  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mjs
vscode/scripts/: vite-plugin-virtual-stylesheet.mjs
vscode/src/: assert.ts  commands.ts  extension.ts  kernelManager.ts  logging.ts  marimo-components.ts  notebookSerializer.ts  operations.ts  renderer.tsx  schemas.ts  types.ts
(+386 files in other folders)
